Fixed best answe UI on mobile

--- a/less/forum/extension.less
+++ b/less/forum/extension.less
@@ -9,6 +9,17 @@
     margin-top: 35px;
     border-radius: 4px;
 
+    .Post-header > ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+
+      .item-meta {
+        flex-grow: 1;
+        text-align: right;
+      }
+    }
+
     .Post-body {
       color: #111;
     }
